--- a/about.html
+++ b/about.html
@@ -6,8 +6,26 @@
     </head>
 
     <body>
-        <h1>Little bit about me</h1>
-        <p>I started this project in order to do a learn and have fun while doing it.</p>
+        <h1>My Resume</h1>
+            <p>I started this project in order to do a learn and have fun while doing it.</p>
+        <h2>"Our limits are only where WE set them."</h2>
+        <img src="./images/IMG_4941.jpg" height="300" alt="photo of myself">
+        <br/>
+        <h3>Education</h3>
+            <ul>
+              <li>Secondary technical school</li>
+               <li>Slovach Technical University</li>
+            </ul>
+        <h3>Work Experience</h3>
+          <ul>
+            <li>Engineer</li>
+            <li>Project Managment</li>
+          </ul>
+        <h3>Skills</h3>
+          <ul>
+            <li>Curiosity</li>
+          </ul>
+
         <br/>
         <hr/>
         <a href="./index.html">
