--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <br/>
     <a href="./about.html">About Me</a>
     <a href="./contact.html">Contact</a>
+    <br/>
+    <footer>
+        <p>2024 Susho</p>
+    </footer>
 </body>
+
 </html>
