--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Home</title>
+        <link 
+        rel="stylesheet"
+        href="./style.css"
+        />
+    </head>
+
 <body>
-    <h1>Well... it's a start</h1>
+    <h1 id="title">Well... it's a start</h1>
     <p>This is all what I've created so far. Click through to learn a more.</p>
-    <br/>
-    <a href="./about.html">About Me</a>
-    <a href="./contact.html">Contact</a>
-    <br/>
+    <p>My goal is to share with you my life progress and inspire you to work on your goals.</p>
+<hr/>
+    <a class="link" href="./about.html">About Me</a> <br/>
+    <a class="link" href="./contact.html">Contact</a> <br/>
+    <a class="link" href="./tools.html">My Tools</a> <br/>
+
+</body>
+<hr/>
     <footer>
         <p>2024 Susho</p>
     </footer>
-</body>
-
 </html>
